# samsung-remote

./: .gitignore  README.md  pyproject.toml  shell.nix
extra/: load-font.sh
samsung_remote/: api.py  gettoken.py  utils.py  web.py
samsung_remote/assets/: main.css
